INTERPROCEDURAL_OPTIMIZATION: Visual Studio
The INTERPROCEDURAL_OPTIMIZATION
target property is not implemented for Visual Studio generators. See some discussion here: !568 (comment 246108)
Edited by Brad King
The INTERPROCEDURAL_OPTIMIZATION
target property is not implemented for Visual Studio generators. See some discussion here: !568 (comment 246108)