Source/cmVisualStudio10TargetGenerator.h
@@ -204,6 +204,7 @@ private:
   bool NsightTegra;
   unsigned int NsightTegraVersion[4];
   bool TargetCompileAsWinRT;
+  std::set<std::string> IPOEnabledConfigurations;
   cmGlobalVisualStudio10Generator* const GlobalGenerator;
   cmLocalVisualStudio10Generator* const LocalGenerator;
   std::set<std::string> CSharpCustomCommandNames;
