Help/release/dev/vs-ipo.rst
@@ -1,0 +1,6 @@
+vs-ipo
+------
+
+* The :ref:`Visual Studio Generators` for VS 2010 and above learned to
+  support the :prop_tgt:`INTERPROCEDURAL_OPTIMIZATION` target property
+  and supporting :module:`CheckIPOSupported` module.
